--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/card_background"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:layout_marginBottom="16dp">
 
     <ImageView
         android:id="@+id/imageViewCardIcon"
