--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/nav_wallet"
-        android:icon="@drawable/ic_search"
+        android:icon="@drawable/wallet"
         android:title="@string/wallet"/>
     <item
         android:id="@+id/nav_booking"
